# Comstruct-Challenge-Think-Codex-Hackathon

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.frontend.yml  docker-compose.infra.yml  docker-compose.yml  llm_extraction_result.json  login.json  login2.json  melos.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
services/ai-service/: Dockerfile  README.md  pyproject.toml
services/ai-service/src/: config.py  dependencies.py  events.py  main.py
services/ai-service/src/llm/: anthropic_client.py  langchain_client.py  ollama_client.py  openai_client.py
services/ai-service/src/prompts/: c_material_classifier.py  column_mapper.py  task_recommender.py
services/ai-service/src/routers/: ai.py  chat.py  documents.py  ingest.py  suppliers.py  workflows.py
services/ai-service/src/services/: catalog_client.py  classification.py  column_mapping.py  delta_detection.py  ingestion.py  parsing.py  pdf_extractor.py  recommendation.py  scoring.py  scraper.py  supplier_proposal.py  upload_validation.py  url_fetcher.py  web_search.py
services/ai-service/tests/: conftest.py  test_ai_core.py  test_classifier_golden.py  test_health.py  test_image_analysis_guard.py  test_import_change_detection.py  test_ingestion_fastpath.py  test_prompt_engineering_guards.py  test_security.py  test_workflows.py
services/catalog-service/: Dockerfile  README.md  pyproject.toml
services/catalog-service/src/: __init__.py  config.py  dependencies.py  main.py  recommendations.py  schemas.py  taxonomy.py
services/catalog-service/src/db/: session.py
services/catalog-service/src/models/: __init__.py  product.py
services/catalog-service/src/routers/: products.py  suppliers.py
services/catalog-service/src/scripts/: seed_dev.py
services/catalog-service/tests/: test_health.py  test_recommendations.py  test_security.py
services/order-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/order-service/src/: __init__.py  config.py  dependencies.py  main.py  schemas.py
services/order-service/src/db/: session.py
services/order-service/src/models/: __init__.py  order.py
services/order-service/src/routers/: approvals.py  cart.py  gdpr.py  internal_auth.py  orders.py  projects.py  registration.py
services/order-service/src/scripts/: seed_dev.py
services/order-service/src/services/: __init__.py  approval_engine.py  catalog_client.py  (+4 more)
services/order-service/tests/: conftest.py  test_approval_engine.py  test_health.py  test_security.py  test_state_machine.py  test_workflow.py
(+162 files in other folders)
